include/dtl/bindings/c/dtl_communicator.h

/* ==========================================================================
 * Variable-Count Collectives
 * ========================================================================== */

/**
 * @brief Gather variable amounts of data from all ranks to root
 *
 * Like dtl_gather, but each rank can send a different number of elements.
 *
 * @param ctx The context
 * @param sendbuf Pointer to send buffer
 * @param sendcount Number of elements to send from this rank
 * @param senddtype Data type of send elements
 * @param recvbuf Pointer to receive buffer (significant only on root)
 * @param recvcounts Array of receive counts (one per rank, root only)
 * @param displs Array of displacements in recvbuf (one per rank, root only)
 * @param recvdtype Data type of receive elements
 * @param root Root rank that gathers
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_gatherv(dtl_context_t ctx,
                                const void* sendbuf, dtl_size_t sendcount,
                                dtl_dtype senddtype,
                                void* recvbuf, const dtl_size_t* recvcounts,
                                const dtl_size_t* displs, dtl_dtype recvdtype,
                                dtl_rank_t root);
/**
 * @brief Scatter variable amounts of data from root to all ranks
 *
 * Like dtl_scatter, but root can send different amounts to each rank.
 *
 * @param ctx The context
 * @param sendbuf Pointer to send buffer (significant only on root)
 * @param sendcounts Array of send counts (one per rank, root only)
 * @param displs Array of displacements in sendbuf (one per rank, root only)
 * @param senddtype Data type of send elements
 * @param recvbuf Pointer to receive buffer
 * @param recvcount Number of elements to receive
 * @param recvdtype Data type of receive elements
 * @param root Root rank that scatters
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_scatterv(dtl_context_t ctx,
                                 const void* sendbuf,
                                 const dtl_size_t* sendcounts,
                                 const dtl_size_t* displs, dtl_dtype senddtype,
                                 void* recvbuf, dtl_size_t recvcount,
                                 dtl_dtype recvdtype, dtl_rank_t root);
/* ==========================================================================
 * Variable-Size Collectives (Phase 12.5)
 * ========================================================================== */

/**
 * @brief All-gather with variable counts
 *
 * Each rank contributes a potentially different number of elements.
 * All ranks receive all data.
 *
 * @param ctx The DTL context
 * @param sendbuf Send buffer
 * @param sendcount Number of elements to send from this rank
 * @param dtype Data type
 * @param recvbuf Receive buffer (must be large enough for all data)
 * @param recvcounts Array of receive counts (one per rank)
 * @param displs Array of displacements in recvbuf (one per rank)
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_allgatherv(dtl_context_t ctx,
                                    const void* sendbuf,
                                    dtl_size_t sendcount, dtl_dtype dtype,
                                    void* recvbuf,
                                    const dtl_size_t* recvcounts,
                                    const dtl_size_t* displs);
/**
 * @brief All-to-all with variable counts
 *
 * Each rank sends a potentially different amount of data to every other rank.
 *
 * @param ctx The DTL context
 * @param sendbuf Send buffer
 * @param sendcounts Array of send counts (one per rank)
 * @param sdispls Array of send displacements (one per rank)
 * @param senddtype Send data type
 * @param recvbuf Receive buffer
 * @param recvcounts Array of receive counts (one per rank)
 * @param rdispls Array of receive displacements (one per rank)
 * @param recvdtype Receive data type
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_alltoallv(dtl_context_t ctx,
                                   const void* sendbuf,
                                   const dtl_size_t* sendcounts,
                                   const dtl_size_t* sdispls,
                                   dtl_dtype senddtype,
                                   void* recvbuf,
                                   const dtl_size_t* recvcounts,
                                   const dtl_size_t* rdispls,
                                   dtl_dtype recvdtype);
/* ==========================================================================
 * Scan / Prefix Operations (Phase 16)
 * ========================================================================== */

/**
 * @brief Inclusive scan (prefix reduction) across ranks
 *
 * Performs an inclusive prefix reduction. On rank i, the result contains
 * the reduction of values from ranks 0..i (inclusive).
 *
 * @param ctx The DTL context
 * @param sendbuf Send buffer
 * @param recvbuf Receive buffer
 * @param count Number of elements
 * @param dtype Data type
 * @param op Reduction operation
 * @return DTL_SUCCESS on success, error code otherwise
 *
 * @note All ranks must call this with identical count, dtype, and op.
 */
DTL_API dtl_status dtl_scan(dtl_context_t ctx,
                             const void* sendbuf, void* recvbuf,
                             dtl_size_t count, dtl_dtype dtype,
                             dtl_reduce_op op);
/**
 * @brief Exclusive scan (prefix reduction) across ranks
 *
 * Performs an exclusive prefix reduction. On rank i, the result contains
 * the reduction of values from ranks 0..i-1. Rank 0 receives the
 * identity element for the operation.
 *
 * @param ctx The DTL context
 * @param sendbuf Send buffer
 * @param recvbuf Receive buffer (undefined on rank 0 for MPI_Exscan)
 * @param count Number of elements
 * @param dtype Data type
 * @param op Reduction operation
 * @return DTL_SUCCESS on success, error code otherwise
 *
 * @note All ranks must call this with identical count, dtype, and op.
 * @note On rank 0, recvbuf is filled with the identity for the operation.
 */
DTL_API dtl_status dtl_exscan(dtl_context_t ctx,
                               const void* sendbuf, void* recvbuf,
                               dtl_size_t count, dtl_dtype dtype,
                               dtl_reduce_op op);
/* ==========================================================================
 * Explicit NCCL Device Collectives
 * ========================================================================== */

/**
 * @brief NCCL allreduce on device buffers (mode from context)
 */
DTL_API dtl_status dtl_nccl_allreduce_device(dtl_context_t ctx,
                                             const void* sendbuf, void* recvbuf,
                                             dtl_size_t count, dtl_dtype dtype,
                                             dtl_reduce_op op);
/**
 * @brief NCCL allreduce on device buffers with explicit mode
 */
DTL_API dtl_status dtl_nccl_allreduce_device_ex(dtl_context_t ctx,
                                                const void* sendbuf, void* recvbuf,
                                                dtl_size_t count, dtl_dtype dtype,
                                                dtl_reduce_op op,
                                                dtl_nccl_operation_mode mode);
/**
 * @brief NCCL broadcast on device buffers (mode from context)
 */
DTL_API dtl_status dtl_nccl_broadcast_device(dtl_context_t ctx,
                                             void* buf, dtl_size_t count,
                                             dtl_dtype dtype, dtl_rank_t root);
/**
 * @brief NCCL broadcast on device buffers with explicit mode
 */
DTL_API dtl_status dtl_nccl_broadcast_device_ex(dtl_context_t ctx,
                                                void* buf, dtl_size_t count,
                                                dtl_dtype dtype, dtl_rank_t root,
                                                dtl_nccl_operation_mode mode);
/**
 * @brief NCCL barrier over explicit NCCL domain (device scratch required)
 */
DTL_API dtl_status dtl_nccl_barrier_device(dtl_context_t ctx);
/**
 * @brief Variable-count gather on device buffers (native/hybrid by mode)
 */
DTL_API dtl_status dtl_nccl_gatherv_device_ex(dtl_context_t ctx,
                                              const void* sendbuf, dtl_size_t sendcount,
                                              dtl_dtype senddtype,
                                              void* recvbuf, const dtl_size_t* recvcounts,
                                              const dtl_size_t* displs, dtl_dtype recvdtype,
                                              dtl_rank_t root,
                                              dtl_nccl_operation_mode mode);
/**
 * @brief Variable-count scatter on device buffers (native/hybrid by mode)
 */
DTL_API dtl_status dtl_nccl_scatterv_device_ex(dtl_context_t ctx,
                                               const void* sendbuf,
                                               const dtl_size_t* sendcounts,
                                               const dtl_size_t* displs, dtl_dtype senddtype,
                                               void* recvbuf, dtl_size_t recvcount,
                                               dtl_dtype recvdtype, dtl_rank_t root,
                                               dtl_nccl_operation_mode mode);
/**
 * @brief Variable-count allgather on device buffers (native/hybrid by mode)
 */
DTL_API dtl_status dtl_nccl_allgatherv_device_ex(dtl_context_t ctx,
                                                 const void* sendbuf, dtl_size_t sendcount,
                                                 dtl_dtype dtype,
                                                 void* recvbuf,
                                                 const dtl_size_t* recvcounts,
                                                 const dtl_size_t* displs,
                                                 dtl_nccl_operation_mode mode);
/**
 * @brief Variable-count alltoall on device buffers (native/hybrid by mode)
 */
DTL_API dtl_status dtl_nccl_alltoallv_device_ex(dtl_context_t ctx,
                                                const void* sendbuf,
                                                const dtl_size_t* sendcounts,
                                                const dtl_size_t* sdispls,
                                                dtl_dtype senddtype,
                                                void* recvbuf,
                                                const dtl_size_t* recvcounts,
                                                const dtl_size_t* rdispls,
                                                dtl_dtype recvdtype,
                                                dtl_nccl_operation_mode mode);
/**
 * @brief Inclusive scan on device buffers (hybrid in parity mode)
 */
DTL_API dtl_status dtl_nccl_scan_device_ex(dtl_context_t ctx,
                                           const void* sendbuf, void* recvbuf,
                                           dtl_size_t count, dtl_dtype dtype,
                                           dtl_reduce_op op,
                                           dtl_nccl_operation_mode mode);
/**
 * @brief Exclusive scan on device buffers (hybrid in parity mode)
 */
DTL_API dtl_status dtl_nccl_exscan_device_ex(dtl_context_t ctx,
                                             const void* sendbuf, void* recvbuf,
                                             dtl_size_t count, dtl_dtype dtype,
                                             dtl_reduce_op op,
                                             dtl_nccl_operation_mode mode);