bindings/fortran/dtl_communication.f90


        function dtl_gatherv(ctx, sendbuf, sendcount, senddtype, &
                             recvbuf, recvcounts, displs, recvdtype, root) &
                bind(c, name='dtl_gatherv')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), value :: sendcount
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int), value :: recvdtype
            integer(c_int), value :: root
            integer(c_int) :: dtl_gatherv
        end function

        function dtl_scatterv(ctx, sendbuf, sendcounts, displs, senddtype, &
                              recvbuf, recvcount, recvdtype, root) &
                bind(c, name='dtl_scatterv')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), intent(in) :: sendcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: recvcount
            integer(c_int), value :: recvdtype
            integer(c_int), value :: root
            integer(c_int) :: dtl_scatterv
        end function

        function dtl_allgatherv(ctx, sendbuf, sendcount, dtype, &
                                recvbuf, recvcounts, displs) &
                bind(c, name='dtl_allgatherv')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), value :: sendcount
            integer(c_int), value :: dtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int) :: dtl_allgatherv
        end function

        function dtl_alltoallv(ctx, sendbuf, sendcounts, sdispls, senddtype, &
                               recvbuf, recvcounts, rdispls, recvdtype) &
                bind(c, name='dtl_alltoallv')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), intent(in) :: sendcounts(*)
            integer(c_int64_t), intent(in) :: sdispls(*)
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: rdispls(*)
            integer(c_int), value :: recvdtype
            integer(c_int) :: dtl_alltoallv
        end function

        ! ------------------------------------------------------------------
        ! Scan / Prefix
        ! ------------------------------------------------------------------

        function dtl_scan(ctx, sendbuf, recvbuf, count, dtype, op) &
                bind(c, name='dtl_scan')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int) :: dtl_scan
        end function

        function dtl_exscan(ctx, sendbuf, recvbuf, count, dtype, op) &
                bind(c, name='dtl_exscan')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int) :: dtl_exscan
        end function

        ! ------------------------------------------------------------------
        ! Explicit NCCL Device Collectives
        ! ------------------------------------------------------------------

        function dtl_nccl_allreduce_device(ctx, sendbuf, recvbuf, count, dtype, op) &
                bind(c, name='dtl_nccl_allreduce_device')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int) :: dtl_nccl_allreduce_device
        end function

        function dtl_nccl_allreduce_device_ex(ctx, sendbuf, recvbuf, count, dtype, op, mode) &
                bind(c, name='dtl_nccl_allreduce_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_allreduce_device_ex
        end function

        function dtl_nccl_broadcast_device(ctx, buf, count, dtype, root) &
                bind(c, name='dtl_nccl_broadcast_device')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: buf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: root
            integer(c_int) :: dtl_nccl_broadcast_device
        end function

        function dtl_nccl_broadcast_device_ex(ctx, buf, count, dtype, root, mode) &
                bind(c, name='dtl_nccl_broadcast_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: buf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: root
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_broadcast_device_ex
        end function

        function dtl_nccl_barrier_device(ctx) &
                bind(c, name='dtl_nccl_barrier_device')
            import :: c_ptr, c_int
            type(c_ptr), value :: ctx
            integer(c_int) :: dtl_nccl_barrier_device
        end function

        function dtl_nccl_gatherv_device_ex(ctx, sendbuf, sendcount, senddtype, &
                                            recvbuf, recvcounts, displs, recvdtype, &
                                            root, mode) &
                bind(c, name='dtl_nccl_gatherv_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), value :: sendcount
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int), value :: recvdtype
            integer(c_int), value :: root
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_gatherv_device_ex
        end function

        function dtl_nccl_scatterv_device_ex(ctx, sendbuf, sendcounts, displs, senddtype, &
                                             recvbuf, recvcount, recvdtype, root, mode) &
                bind(c, name='dtl_nccl_scatterv_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), intent(in) :: sendcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: recvcount
            integer(c_int), value :: recvdtype
            integer(c_int), value :: root
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_scatterv_device_ex
        end function

        function dtl_nccl_allgatherv_device_ex(ctx, sendbuf, sendcount, dtype, &
                                               recvbuf, recvcounts, displs, mode) &
                bind(c, name='dtl_nccl_allgatherv_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), value :: sendcount
            integer(c_int), value :: dtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: displs(*)
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_allgatherv_device_ex
        end function

        function dtl_nccl_alltoallv_device_ex(ctx, sendbuf, sendcounts, sdispls, senddtype, &
                                              recvbuf, recvcounts, rdispls, recvdtype, mode) &
                bind(c, name='dtl_nccl_alltoallv_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            integer(c_int64_t), intent(in) :: sendcounts(*)
            integer(c_int64_t), intent(in) :: sdispls(*)
            integer(c_int), value :: senddtype
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), intent(in) :: recvcounts(*)
            integer(c_int64_t), intent(in) :: rdispls(*)
            integer(c_int), value :: recvdtype
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_alltoallv_device_ex
        end function

        function dtl_nccl_scan_device_ex(ctx, sendbuf, recvbuf, count, dtype, op, mode) &
                bind(c, name='dtl_nccl_scan_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_scan_device_ex
        end function

        function dtl_nccl_exscan_device_ex(ctx, sendbuf, recvbuf, count, dtype, op, mode) &
                bind(c, name='dtl_nccl_exscan_device_ex')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: ctx
            type(c_ptr), value :: sendbuf
            type(c_ptr), value :: recvbuf
            integer(c_int64_t), value :: count
            integer(c_int), value :: dtype
            integer(c_int), value :: op
            integer(c_int), value :: mode
            integer(c_int) :: dtl_nccl_exscan_device_ex
        end function

    end interface

end module dtl_communication
